refactor(tree): replace `List.remove(0)` with `removeFirst`